--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. ||comment ^^*/,
     "baseUrl": "./" /* Specify the base directory to resolve non-relative module names.||comment ^^ */,
     "paths": {
-      "*": ["node_modules/*", "src/types/*"]
+      // "*": ["node_modules/*", "src/types/*"],
+      "src/*": ["src/*"]
     },
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
