--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.6.2",
-    "mongoose": "^8.4.1"
+    "mongoose": "^8.4.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.1",
