--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./dist/server.js",
     "build": "tsc --build",
-    "dev": "nodemon -r module-alias/register -r dotenv/config ./src/primary_apm_server.ts"
+    "dev": "nodemon src/app.ts"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "express-async-errors": "^3.1.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "module-alias": "^2.2.3",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0"
@@ -27,6 +28,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.1",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/module-alias": "^2.0.4",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.12",
     "nodemon": "^3.1.0",
