--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
