--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,10 @@
     "target": "ES6",
     "module": "commonjs",
     "moduleResolution": "node",
-    "baseUrl": "./src",
-    "paths": { "src/*": ["src/*"] },
+    "baseUrl": "src",
+    "paths": {
+      "src/*": ["src/*"]
+    },
     "resolveJsonModule": true,
     "rootDir": "./src",
     "allowJs": true,
