--- a/package.json
+++ b/package.json
@@ -2,20 +2,36 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "todo",
-  "main": "app.js",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "node ./dist/server.js",
+    "start": "cross-env NODE_ENV=production node -r module-alias/register dist/app.js",
     "build": "tsc --build",
-    "dev": "nodemon src/app.ts"
+    "dev": "cross-env NODE_ENV=development nodemon --watch src --exec ts-node -r tsconfig-paths/register src/app.ts"
+  },
+  "_moduleAliases": {
+    "@config": "dist/config",
+    "@controllers": "dist/controllers",
+    "@middlewares": "dist/middlewares",
+    "@interface": "dist/interface",
+    "@models": "dist/models",
+    "@utils": "dist/utils",
+    "@common": "dist/utils/common",
+    "@helper": "dist/utils/helper",
+    "@routes": "dist/routes",
+    "@schemas": "dist/schemas",
+    "@types": "dist/types",
+    "@validations": "dist/validations"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
+    "express-async-handler": "^1.2.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
@@ -28,7 +44,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.1",
+    "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/module-alias": "^2.0.4",
     "@types/morgan": "^1.9.9",
@@ -36,6 +52,7 @@
     "@types/node": "^20.12.12",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.7.3"
   }
 }
